# lvlup_python

./: .gitignore  Dockerfile  README.md  app.py  application.py  categories.txt  category.py  docker-compose.yml  exec.sh  file_system.py  main.py  manage.py  menu.py  mosey2000.csv  pyproject.toml  pytest.ini  requirements.txt  spending.csv  spending.py  values.csv
.github/: workflow.yml
.github/workflows/: workflow.yml
Alexey-budgetCalc/: README.md  budget.csv  main.py  modul.py
calc_app/: admin.py  aggregations.py  apps.py  context.py  forms.py  models.py  urls.py  utils.py  validators.py  views.py
calc_app/migrations/: 0001_initial.py  0001_squashed_0002_alter_category_name.py  0001_squashed_0004_alter_category_options_alter_category_name_and_more.py  0002_alter_category_name.py  0003_alter_expenseitem_category.py
calc_app/static/calc_app/css/: base_style.css  (+4 more)
calc_app/templates/: base.html
calc_app/templates/calc_app/: category_items.html  category_list.html  create_items.html  month_category_detail.html  month_detail.html
calc_app/tests/: test_validators.py  test_views.py
my_calculator/: asgi.py  settings.py  urls.py  wsgi.py
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html  register.html
tests/: test_views.py
vterebey/: BudgetCalculator.py
vterebey/budgetcalculator/: budget_calculator.py  budget_calculator_class.py  budget_calculator_func.py  ui.py
year_selection/: apps.py  forms.py  urls.py  views.py
year_selection/tests/: test_views.py
(+2 files in other folders)
